--- a/styles.css
+++ b/styles.css
@@ -4,13 +4,19 @@ body {
     font-family: 'Raleway', sans-serif;
 }
 
+
+.qr-card {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+
 .project {
-    display: grid;
-    align-items: center center;
     padding: 10px;
-    margin: 250px;
     border-radius: 10px;
-    margin-left: 40%;
     width: 300px;
     height: 500px;
     background-color: white;
@@ -28,7 +34,6 @@ div img {
 
 .main_text {
     color: black;
-    /* padding: 10px; */
     font-size: 15px;
     font-weight: 700;
     text-align: center;
@@ -42,132 +47,19 @@ div img {
     text-align: center;
 }
 
+
 @media (max-width:375px) {
-    body {
+    /* body {
         width: 50%;
-    }
+    } */
     .project {
         margin-left:0% ;
         margin: 150px 0px 100px 0px;
     }
+    .qr-card{
+        width: 120%;
+    }
     .attribution {
         position:fixed;
-    }
-}
-
-@media (max-width:1700px){
-    .project {
-        margin-top: 200px;
-        margin-left: 35%;
-        margin-bottom: 5%;
-    }
-}
-
-@media (max-width:1600px){
-    .project {
-        margin-top: 200px;
-        margin-left: 35%;
-        margin-bottom: 5%;
-    }
-}
-
-@media (max-width:1500px){
-    .project {
-        margin-top: 200px;
-        margin-left: 35%;
-        margin-bottom: 5%;
-    }
-}
-
-@media (max-width:1400px){
-    .project {
-        margin-top: 200px;
-        margin-left: 35%;
-        margin-bottom: 5%;
-    }
-}
-
-@media (max-width:1300px){
-    .project {
-        margin-top: 200px;
-        margin-left: 35%;
-        margin-bottom: 5%;
-    }
-}
-
-@media (max-width:1200px){
-    .project {
-        margin-top: 200px;
-        margin-left: 35%;
-        margin-bottom: 5%;
-    }
-}
-
-@media (max-width:1100px){
-    .project {
-        margin-top: 200px;
-        margin-left: 35%;
-        margin-bottom: 5%;
-    }
-}
-
-@media (max-width:1000px){
-    .project {
-        margin-top: 200px;
-        margin-left: 35%;
-        margin-bottom: 5%;
-    }
-}
-
-@media (max-width:900px){
-    .project {
-        margin-top: 200px;
-        margin-left: 35%;
-        margin-bottom: 5%;
-    }
-}
-
-@media (max-width:800px){
-    .project {
-        margin-top: 200px;
-        margin-left: 30%;
-        margin-bottom: 5%;
-    }
-}
-
-@media (max-width:700px){
-    .project {
-        margin-top: 200px;
-        margin-left: 25%;
-        margin-bottom: 5%;
-    }
-}
-
-@media (max-width:600px){
-    .project {
-        margin-top: 200px;
-        margin-left: 20%;
-        margin-bottom: 5%;
-    }
-}
-
-@media (max-width:500px){
-    .project {
-        margin-left: 15%;
-        margin-bottom: 5%;
-    }
-}
-
-@media (max-width:450px){
-    .project {
-        margin-left: 10%;
-        margin-bottom: 5%;
-    }
-}
-
-@media (max-width:400px){
-    .project {
-        margin-left: 5%;
-        margin-bottom: 5%;
     }
 }
